finished all edits, added colour and fixed alignments!

--- a/pics.css
+++ b/pics.css
@@ -132,7 +132,7 @@ button {
 }
 
 button:hover {
-    background-color: #2EC4B6;
+    background-color: #CBF3F0;
 }
 
 #preview-section {
@@ -205,7 +205,7 @@ button:hover {
   }
   
   .close-button:hover {
-    background-color: #2EC4B6;
+    background-color: #CBF3F0;
   }
 
 .modal-content p {
@@ -219,7 +219,7 @@ button:hover {
 }
 
 footer {
-    background-color: #333;
+    background-color: #2EC4B6 ;
     color: white;
     padding: 1rem 0;
 }
