--- a/works.css
+++ b/works.css
@@ -139,7 +139,7 @@ button:hover {
 }
 
 .tools button:hover {
-  background-color: #2EC4B6;
+  background-color: #CBF3F0;
 
 }
 
@@ -177,32 +177,33 @@ button:hover {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  background-color: #4CAF50;
+  background-color: #FF9F1C;
   color: white;
   font-size: 14px;
 }
 
 #save-design:hover, #finish-design:hover {
-  background-color: #45a049;
+  background-color: #FF9F1C;
 }
 
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
+footer { 
+  background-color: #2EC4B6 ;
+  color: white;
+  padding: 1rem 0;
 }
 
 footer ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
-  gap: 15px;
+  gap: 20px;
 }
 
-footer ul li a {
-  text-decoration: none;
+footer a {
   color: white;
+  font-size: 16px;
 }
+
+footer a:hover {
+  text-decoration: underline;
+}
+
